@@ -5,7 +5,10 @@
 	* dia/CanvasLine.custom: Added, default ctor
 	* dia/CanvasBox.custom: Added, default ctor
 	* dia/CanvasImage.custom: Added, default ctor
+	* dia/CanvasItem.custom: Removed method to create CanvasImage
 	* sources/Dia.metadata: rule disable default constructor added
+	* sample/sample.cs: Added section for programatically 
+	  canvas item creation.
 	
 2003-07-22  Martin Willemoes Hansen <mwh@sysrq.dk>
 	
